--- a/_posts/2099-12-31-catalog.md
+++ b/_posts/2099-12-31-catalog.md
@@ -13,40 +13,38 @@ image:
   alt: tech stack
 ---
 
+#### 编程语言
 
+* Java 9 ~ 17，[Java 7 ~ 8](https://github.com/fangkun119/java_proj_ref/blob/master/401_java8/)
+* [Java multi thread](https://github.com/fangkun119/java_proj_ref/blob/master/410_concurrency/)
+* [Scala](https://github.com/fangkun119/java_proj_ref/blob/master/400_scala/)
+* [JVM](https://github.com/fangkun119/java_proj_ref/blob/master/490_jvm/)
 
-### 编程语言
+#### 框架
 
-- #### Java 9 ~ 17，[Java 7 ~ 8](https://github.com/fangkun119/java_proj_ref/blob/master/401_java8/)
-- #### [Java multi thread](https://github.com/fangkun119/java_proj_ref/blob/master/410_concurrency/)
-- #### [Scala](https://github.com/fangkun119/java_proj_ref/blob/master/400_scala/)
-- #### [JVM](https://github.com/fangkun119/java_proj_ref/blob/master/490_jvm/)
+* [Spring and Spring Boot](https://github.com/fangkun119/java_proj_ref/blob/master/001_spring_stack/)
+* [Spring Batch](https://github.com/fangkun119/java_proj_ref/tree/master/001_spring_stack/004_spring_batch)
+* [Spring Micro service](https://github.com/fangkun119/java_proj_ref/blob/master/002_micro_service/)
 
-### 框架
+#### 基础设施和中间件
 
-- #### [Spring and Spring Boot](https://github.com/fangkun119/java_proj_ref/blob/master/001_spring_stack/)
-- #### [Spring Batch](https://github.com/fangkun119/java_proj_ref/tree/master/001_spring_stack/004_spring_batch)
-- #### [Spring Micro service](https://github.com/fangkun119/java_proj_ref/blob/master/002_micro_service/)
+* [Kafka](https://github.com/fangkun119/java_proj_ref/blob/master/300_kafka/)
+* [Redis](https://github.com/fangkun119/java_proj_ref/blob/master/320_redis/)
+* [Elasticsearch Avanced Knownledge and Best Practice](https://fangkun119.github.io/tech-page/tags/elasticsearch/),   [Elasticsearch](https://github.com/fangkun119/java_proj_ref/blob/master/321_elasticsearch/es7stack/) 
+* [Spark](https://github.com/fangkun119/java_proj_ref/blob/master/500_spark/)
+* [Nginx](https://github.com/fangkun119/java_proj_ref/blob/master/100_nginx_tengine)
 
-### 基础设施和中间件
+#### 大模型
 
-- #### [Kafka](https://github.com/fangkun119/java_proj_ref/blob/master/300_kafka/)
-- #### [Redis](https://github.com/fangkun119/java_proj_ref/blob/master/320_redis/)
-- #### [Elasticsearch Avanced Knownledge and Best Practice](https://fangkun119.github.io/tech-page/tags/elasticsearch/),  [Elasticsearch](https://github.com/fangkun119/java_proj_ref/blob/master/321_elasticsearch/es7stack/) 
-- #### [Spark](https://github.com/fangkun119/java_proj_ref/blob/master/500_spark/)
-- #### [Nginx](https://github.com/fangkun119/java_proj_ref/blob/master/100_nginx_tengine)
+* 技术学习:  [Langchain Hands On(PPT)](/posts/llm01-langchain-handson),  Langchain,  Langgraph,  RAG
+* 代码阅读:  [Text2SQL(PPT)](/posts/llm02-codeinterpreter_text2sql), Agent with Tool Generator(PPT)
+* 技术综述：2024年底技术综述
 
-### 云计算
+#### 云计算
 
-- #### [Docker](https://github.com/fangkun119/java_proj_ref/blob/master/101_docker/)
+* [Docker](https://github.com/fangkun119/java_proj_ref/blob/master/101_docker/)
 
-### 大模型
+#### Web UI
 
-- #### 技术学习:  Langchain, Langgraph
-- #### 项目学习:  Text2SQL, Target Oriented Programming, RAG
-- #### 技术综述：2024年底
-
-### Web UI
-
-- #### [React](https://github.com/fangkun119/java_proj_ref/blob/master/200_react/)
+* [React](https://github.com/fangkun119/java_proj_ref/blob/master/200_react/)
 
