feat(tag): adjust tags and categories

--- a/_posts/2099-12-31-catalog.md
+++ b/_posts/2099-12-31-catalog.md
@@ -36,8 +36,8 @@ image:
 
 #### 大模型
 
-* 技术学习:  [Langchain Hands On(PPT)](/posts/llm01-langchain-handson),  Langchain,  Langgraph,  RAG
-* 代码阅读:  [Text2SQL(PPT)](/posts/llm02-codeinterpreter_text2sql), Agent with Tool Generator(PPT)
+* 技术学习:  [Langchain Hands On(PPT)](https://fangkun119.github.io/tech-page/posts/llm01-langchain-hands_on/),  Langchain,  Langgraph,  RAG
+* 代码阅读:  [Text2SQL(PPT)](https://fangkun119.github.io/tech-page/posts/llm02-codeinterpreter_text2sql/), Agent with Tool Generator(PPT)
 * 技术综述：2024年底技术综述
 
 #### 云计算
