feat(post): llm programming catalog page

--- a/_posts/2025-06-11-java17.md
+++ b/_posts/2025-06-11-java17.md
@@ -3,7 +3,7 @@ title: JDK17 新特性梳理
 author: fangkun119
 date: 2025-03-08 19:50:00 +0800
 categories: [Java, Java 17]
-tags: [Java, Coding, Java 17]
+tags: [Java, Java 17]
 pin: false
 math: true
 mermaid: true
