feat(post): update catlog

--- a/_posts/2099-12-31-catalog.md
+++ b/_posts/2099-12-31-catalog.md
@@ -3,7 +3,7 @@ title: 技术目录
 author: fangkun119
 date: 2025-06-11 19:16:00 +0800
 categories: [目录]
-tags: [目录]
+tags: [目录, Java, JVM, Scala, Spring, Kafka, Redis, Elasticsearch, Spark, Nginx, LLM, Docker, Web UI]
 pin: true
 math: true
 mermaid: true
@@ -15,7 +15,7 @@ image:
 
 #### 编程语言
 
-* Java 9 ~ 17，[Java 7 ~ 8](https://github.com/fangkun119/java_proj_ref/blob/master/401_java8/)
+* [Java 7 ~ 8](https://github.com/fangkun119/java_proj_ref/blob/master/401_java8/), [Java 9 ~ 17](https://fangkun119.github.io/tech-page/posts/java17/)
 * [Java multi thread](https://github.com/fangkun119/java_proj_ref/blob/master/410_concurrency/)
 * [Scala](https://github.com/fangkun119/java_proj_ref/blob/master/400_scala/)
 * [JVM](https://github.com/fangkun119/java_proj_ref/blob/master/490_jvm/)
@@ -30,14 +30,15 @@ image:
 
 * [Kafka](https://github.com/fangkun119/java_proj_ref/blob/master/300_kafka/)
 * [Redis](https://github.com/fangkun119/java_proj_ref/blob/master/320_redis/)
-* [Elasticsearch Avanced Knownledge and Best Practice](https://fangkun119.github.io/tech-page/tags/elasticsearch/),   [Elasticsearch](https://github.com/fangkun119/java_proj_ref/blob/master/321_elasticsearch/es7stack/) 
+* Elasticsearch:  [advanced topics](https://fangkun119.github.io/tech-page/tags/elasticsearch/),   [toturial by Manning](https://github.com/fangkun119/java_proj_ref/blob/master/321_elasticsearch/es7stack/) 
 * [Spark](https://github.com/fangkun119/java_proj_ref/blob/master/500_spark/)
 * [Nginx](https://github.com/fangkun119/java_proj_ref/blob/master/100_nginx_tengine)
 
 #### 大模型
 
-* 技术学习:  [Langchain Hands On(PPT)](https://fangkun119.github.io/tech-page/posts/llm01-langchain-hands_on/),  Langchain,  Langgraph,  RAG
-* 代码阅读:  [Text2SQL(PPT)](https://fangkun119.github.io/tech-page/posts/llm02-codeinterpreter_text2sql/), Agent with Tool Generator(PPT)
+* 技术学习:  Langchain（[PPT](https://fangkun119.github.io/tech-page/posts/llm01-langchain-hands_on/),  [代码](https://github.com/fangkun119/java_proj_ref/tree/master/700_llm/01_langchain)）,  Langgraph （[代码](https://github.com/fangkun119/java_proj_ref/tree/master/700_llm/02_langgraph)），React Agent（[代码](https://github.com/fangkun119/java_proj_ref/blob/master/700_llm/03_react_agent/react_agent.ipynb)）
+* 代码阅读:  Text2SQL（[PPT](https://fangkun119.github.io/tech-page/posts/llm02-codeinterpreter_text2sql/), [代码](https://github.com/fangkun119/java_proj_ref/tree/master/700_llm/90_sample_projects/text_to_sql)），Agent with Tool Generator（[PPT](https://fangkun119.github.io/tech-page/posts/llm03-target-orentieted-paradigm/)，[代码](https://github.com/fangkun119/java_proj_ref/blob/master/700_llm/90_sample_projects/target_orentieted_paradiam)）
+* 项目：Self Reflection RAG（[代码](https://github.com/fangkun119/java_proj_ref/blob/master/700_llm/90_sample_projects/self_reflection_rag)）
 * 技术综述：2024年底技术综述
 
 #### 云计算
