feat(post): redis 2 - persist and cluster

--- a/_posts/2025-07-10-redis03-lock.md
+++ b/_posts/2025-07-10-redis03-lock.md
@@ -95,7 +95,7 @@ public String deductStock() {
 
 以库存扣减这样一个场景为例，演示使用 Redission 实现分布式锁
 
-#### (1) 引入依赖
+#### 2.2.1 引入依赖
 
 引入依赖，除了使用 Redisson 分布式锁，也使用了 Spring Boot 提供的 Redission Template 来读写库存数据
 
@@ -112,7 +112,7 @@ public String deductStock() {
 </dependency>
 ```
 
-#### (2) 初始化 Redisson 客户端
+#### 2.2.2 初始化 Redisson 客户端
 
 组装 Redission Bean，然后就可以将这个 Bean 注入到使用它的地方
 
@@ -131,7 +131,7 @@ public Redisson redisson() {
 }
 ```
 
-#### (3) 使用分布式锁实现库存扣减
+#### 2.2.3 使用分布式锁实现库存扣减
 
 注入 Redission Bean 之后，就可以使用 Redission 提供的分布式锁来完成库存扣减
 
