feat: spring cload alibaba 06 - nacos config center

--- a/_posts/2025-12-18-msscbb23x0-02-demo.md
+++ b/_posts/2025-12-18-msscbb23x0-02-demo.md
@@ -1228,7 +1228,7 @@ spring:
 
 这里的`nacos:nacos-discovery.yml`对应Nacos配置中心同名的远程配置
 
-<img src="/imgs/spring_cloud_alibaba/28eabd9e64746f9b6c7e9fb914c162d8_MD5.jpg" style="display: block; width: 800px;" alt="/imgs/spring_cloud_alibaba/28eabd9e64746f9b6c7e9fb914c162d8_MD5.jpg">
+<img src="/imgs/spring_cloud_alibaba/28eabd9e64746f9b6c7e9fb914c162d8_MD5.jpg" style="display: block; width: 100%;" alt="/imgs/spring_cloud_alibaba/28eabd9e64746f9b6c7e9fb914c162d8_MD5.jpg">
 
 其内容正是上面`步骤(3)`中所要求的Nacos服务发现注册中心的地址
 
@@ -1566,7 +1566,7 @@ spring:
 
 以db-common.yml为例，填入的就是各个微服务连接MySQL的配置，内容与先前的本地配置一样
 
-<img src="/imgs/spring_cloud_alibaba/08693e6f0655d79f3cef0de3a8f56b25_MD5.jpg" style="display: block; width: 900px;" alt="/imgs/spring_cloud_alibaba/08693e6f0655d79f3cef0de3a8f56b25_MD5.jpg">
+<img src="/imgs/spring_cloud_alibaba/08693e6f0655d79f3cef0de3a8f56b25_MD5.jpg" style="display: block; width: 100%;" alt="/imgs/spring_cloud_alibaba/08693e6f0655d79f3cef0de3a8f56b25_MD5.jpg">
 
 其它微服务和公用配置是上传方法相同。
 
@@ -1578,7 +1578,7 @@ spring:
 
 位于`public`命名空间的`DEFAULT_GROUP`下。
 
-<img src="/imgs/spring_cloud_alibaba/3ef26960aebdb4ba98a12fb77731d952_MD5.jpg" style="display: block; width: 800px;" alt="img">
+<img src="/imgs/spring_cloud_alibaba/3ef26960aebdb4ba98a12fb77731d952_MD5.jpg" style="display: block; width: 100%" alt="img">
 
 内容（点击链接可见）和用途如下
 
@@ -1597,7 +1597,7 @@ spring:
 
 如下图，是中间件自己的配置，只有Seata。它位于命名空间`seata`的`SEATA_GROUP`下。
 
-<img src="/imgs/spring_cloud_alibaba/e95f37828ca519ab5a47563c6440d6b5_MD5.jpg" style="display: block; width: 800px;" alt="imgs">
+<img src="/imgs/spring_cloud_alibaba/e95f37828ca519ab5a47563c6440d6b5_MD5.jpg" style="display: block; width: 100%;" alt="imgs">
 
 内容和用途如下表。
 
@@ -1631,7 +1631,7 @@ spring:
 
 **创建Undo Log表（仅AT模式）**
 
-<img src="/imgs/spring_cloud_alibaba/a71dd9ce58d46caff57575ff11f1fd03_MD5.jpg" style="display: block; width: 800px;" alt="/imgs/spring_cloud_alibaba/a71dd9ce58d46caff57575ff11f1fd03_MD5.jpg">
+<img src="/imgs/spring_cloud_alibaba/a71dd9ce58d46caff57575ff11f1fd03_MD5.jpg" style="display: block; width: 100%;" alt="/imgs/spring_cloud_alibaba/a71dd9ce58d46caff57575ff11f1fd03_MD5.jpg">
 
 在3.3小节和业务表一起创建，SQL见 [microservices/sql/init.sql](https://github.com/fangkun119/spring-cloud-alibaba-2023-demo/blob/main/microservices/sql/init.sql)
 
@@ -1732,7 +1732,7 @@ public class OrderServiceImpl implements OrderService {
 
 与`7.3 事务发起者`相同，在`3.3小节`和业务表一起创建，SQL见 [microservices/sql/init.sql](https://github.com/fangkun119/spring-cloud-alibaba-2023-demo/blob/main/microservices/sql/init.sql)
 
-<img src="/imgs/spring_cloud_alibaba/4e55485e206c84d2aab275075680f6b3_MD5.jpg" style="display: block; width: 800px;" alt="img">
+<img src="/imgs/spring_cloud_alibaba/4e55485e206c84d2aab275075680f6b3_MD5.jpg" style="display: block; width: 100%;" alt="img">
 
 **添加Seata Client配置**
 
@@ -1802,7 +1802,7 @@ UPDATE tlmall_account.account SET money = 1 where user_id = 'fox'
 
 日志如下
 
-<img src="/imgs/spring_cloud_alibaba/11b4d95cd84fcbbddd89fe3802eb5f48_MD5.jpg" style="display: block; width: 800px;" alt="img">
+<img src="/imgs/spring_cloud_alibaba/11b4d95cd84fcbbddd89fe3802eb5f48_MD5.jpg" style="display: block; width: 100%;" alt="img">
 
 ### 7.4 Seata 2.0.0 的问题
 
@@ -1948,7 +1948,7 @@ Demo使用Spring MVC实现的Controller，不需要配置，引入Sentinel依赖
 
 启动微服务，先通过`tlmall-frontend:8080`进行一次下单，然后登录`http://tlmall-sentinel-dashboard:8888/` ，就能看到`tlmall-order`出现在Sentinel Dashboard的列表中
 
-<img src="/imgs/spring_cloud_alibaba/5ebf80005c173228ee303748a5830e73_MD5.jpg" style="display: block; width: 800px;" alt="img">
+<img src="/imgs/spring_cloud_alibaba/5ebf80005c173228ee303748a5830e73_MD5.jpg" style="display: block; width: 100%;" alt="img">
 
 上面的数值都是统计值，默认为0，需要一定数量的API触发，才能它们的数值增加
 
@@ -1969,13 +1969,13 @@ curl 'http://tlmall-gateway:18888/order/create' \
 
 将这个curl命令导入到Postman Collection（也可以直接导入<https://github.com/fangkun119/postman-workspace>上的Postman Collection），就可以用于接下来的测试了
 
-<img src="/imgs/spring_cloud_alibaba/a1b44a1783b376f611b576509dffb85c_MD5.jpg" style="display: block; width: 800px;" alt="imgs">
+<img src="/imgs/spring_cloud_alibaba/a1b44a1783b376f611b576509dffb85c_MD5.jpg" style="display: block; width: 100%;" alt="imgs">
 
 同时也能从curl命令找到所访问的Restful Resource为`/order/create`
 
 ### 8.3 流量控制
 
-<img src="/imgs/spring_cloud_alibaba/5ebf80005c173228ee303748a5830e73_MD5.jpg" style="display: block; width: 800px;" alt="img">
+<img src="/imgs/spring_cloud_alibaba/5ebf80005c173228ee303748a5830e73_MD5.jpg" style="display: block; width: 100%;" alt="img">
 
 点击`/order/create` 右边的`+流控`按钮，填入下面的配置，点击`新增`
 
@@ -1983,11 +1983,11 @@ curl 'http://tlmall-gateway:18888/order/create' \
 
 点击`新增`就把流控规则创建好了，这样每秒钟最多只能请求一次
 
-<img src="/imgs/spring_cloud_alibaba/7d969e6637c2f348fc74e069bffbad39_MD5.jpg" style="display: block; width: 800px;" alt="img">
+<img src="/imgs/spring_cloud_alibaba/7d969e6637c2f348fc74e069bffbad39_MD5.jpg" style="display: block; width: 100%;" alt="img">
 
 用PostMan连续快速发送下单请求，可以看到请求被Sentinel阻塞
 
-<img src="/imgs/spring_cloud_alibaba/91f1a5d879ed6ea683fe28dcb09a432f_MD5.jpg" style="display: block; width: 800px;" alt="img">
+<img src="/imgs/spring_cloud_alibaba/91f1a5d879ed6ea683fe28dcb09a432f_MD5.jpg" style="display: block; width: 100%;" alt="img">
 
 论其底层原理：
 
@@ -2026,7 +2026,7 @@ Spring Cloud Gateway是Spring Cloud官方推出的第二代网关框架，用于
 
 在IDEA的项目中添加一个模块（module）名为`tlmall-gateway`
 
-<img src="/imgs/spring_cloud_alibaba/a79a536de4bc4cbd2ef89b26efe919f5_MD5.jpg" style="display: block; width: 800px;" alt="img">
+<img src="/imgs/spring_cloud_alibaba/a79a536de4bc4cbd2ef89b26efe919f5_MD5.jpg" style="display: block; width: 100%;" alt="img">
 
 添加Spring Cloud Gateway Maven依赖，同时和其它模块一样、也添加Nacos注册中心、配置中心、负载均衡器依赖
 
@@ -2079,7 +2079,7 @@ spring:
 
 编写并上传`tlmall-gateway.yml` 到Nacos
 
-<img src="/imgs/spring_cloud_alibaba/a1358cf9be483e82bf8e8aff86d175c0_MD5.jpg" style="display: block; width: 800px;" alt="img">
+<img src="/imgs/spring_cloud_alibaba/a1358cf9be483e82bf8e8aff86d175c0_MD5.jpg" style="display: block; width: 100%;" alt="img">
 
 只写Gateway路由配置即可，其它配置在本地
 
@@ -2191,10 +2191,10 @@ $ cp optional-plugins/apm-spring-cloud-gateway-4.x-plugin-9.3.0.jar plugins/
 
 启动微服务，可以在启动日志里看到与SkyWalking相关的日志
 
-<img src="/imgs/spring_cloud_alibaba/706d17d81fc79c4902cd55145d579be8_MD5.jpg" style="display: block; width: 800px;" alt="img">
+<img src="/imgs/spring_cloud_alibaba/706d17d81fc79c4902cd55145d579be8_MD5.jpg" style="display: block; width: 100%;" alt="img">
 
 访问SkyWalking控制台，可以看到微服务已经接入SkyWalking
-<img src="/imgs/spring_cloud_alibaba/26da127a145682ee659485271679e880_MD5.jpg" style="display: block; width: 800px;" alt="img">
+<img src="/imgs/spring_cloud_alibaba/26da127a145682ee659485271679e880_MD5.jpg" style="display: block; width: 100%;" alt="img">
 
 用PoskMan向订单服务发请求，可以在Trace中看到这个请求的调用链路
-<img src="/imgs/spring_cloud_alibaba/084938ae7f67fc69af5cc2976860ee27_MD5.jpg" style="display: block; width: 800px;" alt="img">
+<img src="/imgs/spring_cloud_alibaba/084938ae7f67fc69af5cc2976860ee27_MD5.jpg" style="display: block; width: 100%;" alt="img">
